force-app/main/default/objects/Account/fields/Red_Date__c.field-meta.xml
<CustomField>
    <fullName>Red_Date__c</fullName>
    <label>Red Date</label>
    <type>Date</type>
</CustomField>