force-app/main/default/objects/Account/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <label>Resolved Date</label>
    <type>Date</type>
</CustomField>