force-app/main/default/objects/Account/fields/Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating__c</fullName>
    <formula>IMAGE( 
CASE(Rating, 
&quot;Cold&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;Warm&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;Hot&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Star Rating</label>
    <type>Text</type>
</CustomField>