force-app/main/default/objects/Account/fields/Top_of_Mind__c.field-meta.xml
<CustomField>
    <fullName>Top_of_Mind__c</fullName>
    <label>Top of Mind</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>